[gd_scene load_steps=4 format=3 uid="uid://di730hki0lhra"]

[ext_resource type="Texture2D" uid="uid://bycr74fperat3" path="res://assets/images/masters/headers/emiya_shirou/emiya_shirou_norm.png" id="1_cgswi"]
[ext_resource type="Script" path="res://assets/scripts/ui/header_turn.gd" id="1_utyut"]
[ext_resource type="Texture2D" uid="uid://bpd2ytxirc8db" path="res://assets/images/ui/header/header_overlap_norm.png" id="3_ldped"]

[node name="HeaderTurn" type="Node2D"]
script = ExtResource("1_utyut")

[node name="Header" type="TextureRect" parent="."]
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("1_cgswi")
expand_mode = 1

[node name="HeaderCover" type="TextureRect" parent="."]
offset_left = -17.0
offset_top = 6.0
offset_right = 306.0
offset_bottom = 284.0
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_ldped")

[node name="HeaderButton" type="TextureButton" parent="."]
offset_right = 229.0
offset_bottom = 229.0
scale = Vector2(0.35, 0.35)
mouse_default_cursor_shape = 2
ignore_texture_size = true

[connection signal="button_down" from="HeaderButton" to="." method="_on_header_button_button_down"]
[connection signal="button_up" from="HeaderButton" to="." method="_on_header_button_button_up"]
[connection signal="mouse_entered" from="HeaderButton" to="." method="_on_header_button_mouse_entered"]
[connection signal="mouse_exited" from="HeaderButton" to="." method="_on_header_button_mouse_exited"]
